added "change medical card" endpoint
